# cypher-cli-v3

./: .gitignore  Cargo.toml  README.md  testbot1.json
.github/workflows/: build.yml
cfg/: config-sol.json  markets.json  pools.json  tokens.json
cfg/liquidator/: default.json
cfg/market-maker/: btc-perp.json  default.json  eth-perp.json
data/: lender1.json  maker1.json  maker2.json  maker3.json  maker4.json  maker5.json  regular1.json  regular2.json  regular3.json  regular4.json
scripts/: build.sh
src/: main.rs
src/cli/: account.rs  app.rs  args.rs  command.rs  faucet.rs  futures.rs  liquidator.rs  list.rs  market_maker.rs  mod.rs  orderbook.rs  perpetuals.rs  random.rs  spot.rs  sub_account.rs
src/common/: context.rs  dispatcher.rs  hedger.rs  info.rs  inventory.rs  maker.rs  mod.rs  oracle.rs  order_manager.rs  orders.rs  runner.rs  strategy.rs
src/config/: mod.rs
src/context/: cypher_manager.rs  mod.rs
src/context/builders/: derivatives.rs  global.rs  mod.rs  spot.rs
src/liquidator/: accounts.rs  check.rs  config.rs  cypher.rs  error.rs  info.rs  mod.rs  simulation.rs
src/market_maker/: build.rs  config.rs  constants.rs  context.rs  error.rs  executor.rs  inventory.rs  mod.rs  runner.rs
src/market_maker/hedging/: cypher.rs  futures.rs  mod.rs  perps.rs  serum.rs  spot.rs
src/market_maker/making/: cypher.rs  futures.rs  mod.rs  perps.rs  serum.rs  spot.rs
src/market_maker/orders/: futures.rs  mod.rs  perps.rs  spot.rs
src/market_maker/strategies/: hedging.rs  making.rs  mod.rs
src/oracle/: cypher.rs  mod.rs
src/random/: mod.rs  strategy.rs
src/utils/: accounts.rs  transactions.rs
