[package]
name = "cypher-cli"
edition = "2021"
version = "3.0.0"
description = "A command-line application to interface with cypher v3"
license = "Apache-2.0"
authors = ["Hugo <hoak@offpiste.io>"]
keywords = ["solana", "anchor", "cypher", "cpi", "cli", "marketmaking", "liquidator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "devnet" ]
devnet = [ "anchor-spl/devnet", "cypher-client/devnet", "cypher-utils/devnet" ]
mainnet-beta = [ "cypher-client/mainnet-beta", "cypher-utils/mainnet-beta" ]

[dependencies]
agnostic-orderbook = { git = "https://github.com/chugach-foundation/agnostic-orderbook.git" }
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0", features = [ "token", "associated_token", "dex", ] }
async-trait = "0.1.58"
chrono = "0.4.19"
clap = "2.33.1"
cypher-client = { path = "../cypher-client-v3/cypher-client/" }
cypher-utils = { path = "../cypher-client-v3/cypher-utils/" }
dashmap = "5.3.4"
env_logger = "0.9.3"
faucet-client = { path = "../cypher-client-v3/faucet-client/" }
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
futures = "0.3.21"
futures-core = "0.3.21"
futures-util = "0.3.21"
log = "0.4.17"
once_cell = "1.6.0"
serde = { version = "1.0.137", features = [ "derive" ] }
serde_json = "1.0.81"
serum_dex = { version = "0.5.4", features = [ "no-entrypoint" ] }
solana-account-decoder = "~1.14.11"
solana-clap-utils = "~1.14.11"
solana-client = "~1.14.11"
solana-sdk = "~1.14.11" 
solana-transaction-status = "~1.14.11"
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
thiserror = "1.0.31"
thousands = "0.2.0"
tokio = "1.14.1"
hex = "0.4.3"